# TFM

./: .gitignore  README.md
code/: CMakeLists.txt
code/.ipynb_checkpoints/: rectangles-checkpoint.ipynb
code/RunDir/: annotator  correspondence_grouping  display_pcd  euclidean_cluster_segmentation  icp_registration2  model_segmentation  ndt_registration  regiongrowing_segmentation  regiongrowingrgb_segmentation
code/img/: cocacola0_pack_MASK.json  cocacola_4inrow_MASK.json  cocacola_and_pepsi_MASK.json  cocacola_clear_MASK.json  cocacola_face10_MASK.json  cocacola_face9_MASK.json  pepsi_alone_MASK.json
code/pcd/darthvader/: cluster2.pcd
code/pcd/detergent/: detergent_model.pcd  detergent_regmodel.pcd
code/pcd/milk/: cluster2.pcd
code/pcd/pepsi/: cluster5.pcd
code/pcd/pointclouds_from_030627_09062021/: reg_071822_17062021.json
code/pcd/pointclouds_from_165823_27042021/: 0.pcd  1.json  camera_intrinsics.json
code/pcd/pointclouds_from_243528_24042021/: camera_intrinsics.json
code/pcd/pointclouds_from_420726_09052021/: 0.json  camera_intrinsics.json
code/pcd/pointclouds_from_451308_09052021/: 0.json  camera_intrinsics.json
code/realsense/: CMakeLists.txt
code/realsense/RunDir/: pcd_streamer
code/realsense/src/: example.hpp  pcd_streamer.cpp
code/src/: CMakeLists.txt  annotator.cpp  bbox3D_to_bbox2D.cpp  correspondence_grouping.cpp  crop_infer.ipynb  display_pcd.cpp  euclidean_cluster_segmentation.cpp  freiburg_net.py  hog_knn.ipynb  hog_report.ipynb  hog_svm.ipynb  hough.py  hough_report.ipynb  icp_registration.cpp  icp_registration2.cpp  model_segmentation.cpp  ndt_registration.cpp  rectangles.py  regiongrowing_segmentation.cpp  regiongrowingrgb_segmentation.cpp  seam_carving_report.ipynb  sift.py  template_matching.ipynb  test_projection.py  utils.cpp  utils.h  utils.py
papers/: Least-square fitting of two 3-D point sets_Arun_etal
report/: main.tex  main.xdv
report/bibliography/: biblio_TFM.bib
report/images/: 0cocacola_testbench2_TM.pgf  0milk_testbench2_TM.pgf  0pepsiVSmilk_crop_TM.pgf  0pepsi_TM.pgf  0pepsi_crop_TM.pgf  0pepsi_testbench2_TM.pgf  0pepsi_testbench_TM.pgf  1cocacola_testbench2_TM.pgf  1milk_testbench2_TM.pgf  1pepsiVSmilk_crop_TM.pgf  1pepsi_TM.pgf  1pepsi_crop_TM.pgf  1pepsi_testbench2_TM.pgf  1pepsi_testbench_TM.pgf  2cocacola_testbench2_TM.pgf  2milk_testbench2_TM.pgf  2pepsiVSmilk_crop_TM.pgf  2pepsi_TM.pgf  2pepsi_crop_TM.pgf  2pepsi_testbench2_TM.pgf  2pepsi_testbench_TM.pgf  3cocacola_testbench2_TM.pgf  3milk_testbench2_TM.pgf  3pepsiVSmilk_crop_TM.pgf  3pepsi_TM.pgf  3pepsi_crop_TM.pgf  3pepsi_testbench2_TM.pgf  3pepsi_testbench_TM.pgf  4milk_testbench2_TM.pgf  4pepsiVSmilk_crop_TM.pgf  4pepsi_TM.pgf  4pepsi_crop_TM.pgf  4pepsi_testbench2_TM.pgf  4pepsi_testbench_TM.pgf  5milk_testbench2_TM.pgf  5pepsiVSmilk_crop_TM.pgf  5pepsi_TM.pgf  5pepsi_crop_TM.pgf  5pepsi_testbench2_TM.pgf  5pepsi_testbench_TM.pgf  (+28 more)
report/sections/: 2D_and_3D_solutions.tex  2D_approach.tex  3D_approach.tex  abstract.tex  acknowledgements.tex  appendix.tex  conclusions.tex  cover_page_report.tex  future_work.tex  honor_declaration.tex  introduction.tex  methodology_and_tooling.tex  sota.tex
